// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: RegisterPage happy path render 1`] = `
<div>
  <CenteredLogo />
  <Panel.LEGACY
    title="Set Password"
  >
    <Panel.LEGACY.Section>
      <Stack>
        <p>
          <small>
            jose@example.com
             invited you to join their SparkPost account.
          </small>
        </p>
        <Connect(ReduxForm)
          email="newperson@example.com"
          onSubmit={[Function]}
        />
      </Stack>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`Page: RegisterPage loading 1`] = `
<div>
  <CenteredLogo />
  <Panel.LEGACY
    title="Set Password"
  >
    <PanelLoading
      accent={false}
      minHeight="400px"
    />
  </Panel.LEGACY>
  <Panel.LEGACY.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`Page: RegisterPage no token 1`] = `
<Redirect
  to="/auth"
/>
`;

exports[`Page: RegisterPage token expired 1`] = `
<div>
  <CenteredLogo />
  <Panel.LEGACY
    title="Set Password"
  >
    <Panel.LEGACY.Section>
      <p>
        This invite has expired, please ask your account administrator to re-send your invitation
      </p>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;
